# sdeep

./: .buildinfo  .gitignore  .pylintrc  README.md  about.html  genindex.html  guide.html  index.html  install.html  main_cli.py  main_factory.py  main_predict.py  main_train.py  modules.html  objects.inv  params.json  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  train.sh
_sources/: guide.rst  install.rst  modules.rst
docs/source/: about.rst  conf.py  guide.rst  install.rst  modules.rst
sdeep/: __init__.py
sdeep/api/: __init__.py  api.py
sdeep/cli/: __init__.py  datasets_factory.py  factory.py  losses_factory.py  models_factory.py  optimizers_factory.py  predict.py  predict_image.py  predict_restoration.py  train.py  utils.py  workflows_factory.py
sdeep/datasets/: __init__.py  mnist.py  n2x.py  restoration.py  restoration_dataset.py  segmentation.py  self_supervised.py
sdeep/evals/: __init__.py  classification.py  interface.py  restoration.py
sdeep/factories/: __init__.py  datasets_factory.py  losses_factory.py  models_factory.py  optimizers_factory.py  utils.py  workflows_factory.py
sdeep/factory/: __init__.py  factory.py
sdeep/interfaces/: __init__.py  dataset.py  eval.py  model.py  transform.py  workflow.py
sdeep/losses/: __init__.py  deconv_mse.py  dice.py  dog.py  error_maps.py  fmse.py  frc.py  frmse.py  n2x.py  perceptual.py  self_supervised.py  torch_losses.py  tversky.py  utils.py
sdeep/models/: __init__.py  autoencoder.py  classifier.py  deep_finder.py  dncnn.py  drunet.py  drunetup.py  mnist.py  rcan.py  unet.py
sdeep/optims/: __init__.py  optims.py
sdeep/transforms/: __init__.py  augmentation.py  restoration.py  vision.py
sdeep/utils/: __init__.py  data_loggers.py  device.py  io.py  parameters.py  progress.py  progress_loggers.py  tile_predict.py  utils.py
sdeep/workflows/: __init__.py  base.py  classification.py  n2x.py  restoration.py  segmentation.py  self_supervised.py
tests/models/: test_deep_finder.py  test_dncnn.py  test_drunet.py  test_mnist.py  test_unet.py
