[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sdeep"
version = "0.0.1"
dependencies = [
    "numpy >= 1.26.4",
    "pandas",
    "scikit-learn >= 1.5.1",
    "torch >= 2.2.1",
    "torchvision",
    "scikit-image >= 0.24.0",
    "tensorboard >= 2.17.0",
]
requires-python = ">= 3.10"
maintainers = [
  {name = "Sylvain Prigent", email = "meriadec.prigent@gmail.com"}
]
description = "Framework to train small neural network"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Data science", "Deep learning", "Torch"]
classifiers = [
  "Development Status :: 2 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.setuptools]
py-modules = ["sdeep"]

[project.scripts]
sdtrain = "sdeep.cli.train:main"
sdpredict = "sdeep.cli.predict:main"


[project.urls]
Homepage = "https://sylvainprigent.github.io/sdeep"
Documentation = "https://sylvainprigent.github.io/sdeep"
Repository = "https://github.com/sylvainprigent/sdeep.git"
"Bug Tracker" = "https://github.com/sylvainprigent/sdeep/issues"
Changelog = "https://github.com/sylvainprigent/sdeep/blob/master/CHANGELOG.md"
